[gd_scene load_steps=6 format=3 uid="uid://b2o7uyspt6dgw"]

[ext_resource type="Script" uid="uid://ba8vps65ruj1s" path="res://_Scenes/Training/training.gd" id="1_cboif"]
[ext_resource type="Texture2D" uid="uid://dvvogl73722t3" path="res://Assets/Sprites/enclosure_plains.png" id="2_h3a4d"]
[ext_resource type="Theme" uid="uid://dw80nkeq5acxs" path="res://_Scenes/Game/main_ui.tres" id="3_mfvn2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfvn2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfyb0"]
bg_color = Color(0.0588235, 0.0745098, 0.12549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0588235, 0.0745098, 0.12549, 0.482353)
shadow_size = 3
anti_aliasing = false

[node name="Training" type="TextureRect"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -400.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h3a4d")
expand_mode = 4
stretch_mode = 6
script = ExtResource("1_cboif")

[node name="TrainingFinishedFilter" type="ColorRect" parent="."]
z_index = 5
layout_mode = 0
offset_top = 400.0
offset_right = 1152.0
offset_bottom = 1048.0
color = Color(0.0611, 0.0771767, 0.13, 1)

[node name="TrainingFinished" type="Panel" parent="TrainingFinishedFilter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_mfvn2")
theme_override_styles/panel = SubResource("StyleBoxFlat_mfvn2")

[node name="Title" type="Label" parent="TrainingFinishedFilter/TrainingFinished"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 144.0
grow_horizontal = 2
theme = ExtResource("3_mfvn2")
theme_override_colors/font_shadow_color = Color(0.6, 0.28, 0, 1)
theme_override_constants/line_spacing = -32
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 72
text = "TRAINING
COMPLETE!"
horizontal_alignment = 1

[node name="ProduceChanges" type="VBoxContainer" parent="TrainingFinishedFilter/TrainingFinished"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -156.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="OldProduce" type="Label" parent="TrainingFinishedFilter/TrainingFinished/ProduceChanges"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 50
text = "OLD: $100"

[node name="NewProduce" type="Label" parent="TrainingFinishedFilter/TrainingFinished/ProduceChanges"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 48
text = "NEW: $200"

[node name="TrainingStatus" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 410.0
offset_right = 210.0
offset_bottom = 510.0
theme = ExtResource("3_mfvn2")
theme_override_styles/panel = SubResource("StyleBoxFlat_pfyb0")

[node name="Value" type="Label" parent="TrainingStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 64
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1
